==> labapart/polymcu/Device/Freescale/Driver/uart_debug/Driver_USART.c <==
#include "board.h"
#include "Driver_USART.h"
    #include "fsl_uart.h"
    #include "fsl_lpsci.h"
    #include "fsl_lpuart.h"
#include "PolyMCU.h"
  #define DEBUG_UART_BAUDRATE 115200
#define WAIT_FOREVER 0xFFFFFFFFU
#define ARM_USART_DRV_VERSION    ARM_DRIVER_VERSION_MAJOR_MINOR(2, 0)  /* driver version */

int32_t ARM_USART_Initialize(ARM_USART_SignalEvent_t cb_event) {
#if FREESCALE_DEBUG_UART
	#error UART not supported yet
#endif

#if FREESCALE_DEBUG_LPSCI
	status_t status;

	assert(BOARD_DEBUG_UART_INSTANCE < FSL_FEATURE_SOC_LPSCI_COUNT);

	m_SignalEvent = cb_event;

	/* SIM_SOPT2[27:26]:
	 *  00: Clock Disabled
	 *  01: IRC48M
	 *  10: OSCERCLK
	 *  11: MCGIRCCLK
	 */
	CLOCK_SetLpsci0Clock(1);

    // Enable clock and initial UART module follow user configure structure.
    status = LPSCI_Init(g_lpsci_bases[BOARD_DEBUG_UART_INSTANCE], &m_lpsciInitialConfig, BOARD_DEBUG_UART_FREQUENCY);
	if (status == kStatus_Success) {
	    LPSCI_EnableTx(g_lpsci_bases[BOARD_DEBUG_UART_INSTANCE], true);
	    LPSCI_EnableRx(g_lpsci_bases[BOARD_DEBUG_UART_INSTANCE], true);

	    return ARM_DRIVER_OK;
	} else {
		return ARM_DRIVER_ERROR_UNSUPPORTED;
	}
#endif

#if FREESCALE_DEBUG_LPUART
	assert(BOARD_DEBUG_UART_INSTANCE < FSL_FEATURE_SOC_LPUART_COUNT);

	m_SignalEvent = cb_event;

	/* SIM_SOPT2[27:26]:
	 *  00: Clock Disabled
	 *  01: IRC48M
	 *  10: OSCERCLK
	 *  11: MCGIRCCLK
	 */
#if BOARD_DEBUG_UART_INSTANCE == 0
	CLOCK_SetLpuart0Clock(1);
#elif BOARD_DEBUG_UART_INSTANCE == 1
	CLOCK_SetLpuart1Clock(1);
#endif

	LPUART_Init(g_lpuart_bases[BOARD_DEBUG_UART_INSTANCE], &m_lpuartInitialConfig, BOARD_DEBUG_UART_FREQUENCY);
	LPUART_EnableTx(g_lpuart_bases[BOARD_DEBUG_UART_INSTANCE], true);
	LPUART_EnableRx(g_lpuart_bases[BOARD_DEBUG_UART_INSTANCE], true);

	return ARM_DRIVER_OK;
#endif
}

int32_t ARM_USART_Uninitialize(void) {
#if FREESCALE_DEBUG_UART
	#error UART not supported yet
#endif

#if FREESCALE_DEBUG_LPSCI
	LPSCI_Deinit(g_lpsci_bases[BOARD_DEBUG_UART_INSTANCE]);
#endif

#if FREESCALE_DEBUG_LPUART
	LPUART_Deinit(g_lpuart_bases[BOARD_DEBUG_UART_INSTANCE]);
#endif

	return ARM_DRIVER_OK;
}

int32_t ARM_USART_Send(const void *data, uint32_t num) {
	const char *ptr = data;

#if FREESCALE_DEBUG_UART
	#error UART not supported yet
#endif

#if FREESCALE_DEBUG_LPSCI
	LPSCI_WriteBlocking(g_lpsci_bases[BOARD_DEBUG_UART_INSTANCE], data, num);
#endif

#if FREESCALE_DEBUG_LPUART
	LPUART_WriteBlocking(g_lpuart_bases[BOARD_DEBUG_UART_INSTANCE], data, num);
#endif

	// Ensure we return carriage
	if ((num >= 2) && (ptr[num-1] == '\n') && (ptr[num-2] != '\r')) {
		_ttywrch('\r');
	}

	if (m_SignalEvent) {
		m_SignalEvent(ARM_USART_EVENT_SEND_COMPLETE);
	}
	return num;
}

int32_t ARM_USART_Receive(void *data, uint32_t num) {
	status_t status;

#if FREESCALE_DEBUG_UART
	#error UART not supported yet
#endif

#if FREESCALE_DEBUG_LPSCI
	status = LPSCI_ReadBlocking(g_lpsci_bases[BOARD_DEBUG_UART_INSTANCE], data, num);
#endif

#if FREESCALE_DEBUG_LPUART
	status = LPUART_ReadBlocking(g_lpuart_bases[BOARD_DEBUG_UART_INSTANCE], data, num);
#endif

	if (status == kStatus_Success) {
		if (m_SignalEvent) {
			m_SignalEvent(ARM_USART_EVENT_RECEIVE_COMPLETE);
		}
		return ARM_DRIVER_OK;
	} else {
		return ARM_DRIVER_ERROR_UNSUPPORTED;
	}
}

int32_t ARM_USART_Control(uint32_t control, uint32_t arg) {
#if FREESCALE_DEBUG_UART
	#error UART not supported yet
#endif

#if FREESCALE_DEBUG_LPSCI
	int32_t status = ARM_DRIVER_OK;

	// Set baud rate
	m_lpsciUserConfig.baudRate_Bps = arg;

	switch (control & ARM_USART_DATA_BITS_Msk) {
	//OM:case ARM_USART_DATA_BITS_8:
	//OM:	m_lpsciUserConfig.bitCountPerChar = kLPSCI_8BitsPerChar;
	//OM:	break;
	//OM:case ARM_USART_DATA_BITS_9:
	//OM:	m_lpsciUserConfig.bitCountPerChar = kLPSCI_9BitsPerChar;
	//OM:	break;
	default:
		status = ARM_DRIVER_ERROR_UNSUPPORTED;
		DEBUG_NOT_SUPPORTED();
		break;
	}

	switch (control & ARM_USART_PARITY_Msk) {
	case ARM_USART_PARITY_NONE:
		m_lpsciUserConfig.parityMode = kLPSCI_ParityDisabled;
		break;
	case ARM_USART_PARITY_EVEN:
		m_lpsciUserConfig.parityMode = kLPSCI_ParityEven;
		break;
	case ARM_USART_PARITY_ODD:
		m_lpsciUserConfig.parityMode = kLPSCI_ParityOdd;
		break;
    }

	switch (control & ARM_USART_STOP_BITS_Msk) {
	case ARM_USART_STOP_BITS_1:
		m_lpsciUserConfig.stopBitCount = kLPSCI_OneStopBit;
		break;
	case ARM_USART_STOP_BITS_2:
		m_lpsciUserConfig.stopBitCount = kLPSCI_TwoStopBit;
		break;
	default:
		status = ARM_DRIVER_ERROR_UNSUPPORTED;
		DEBUG_NOT_SUPPORTED();
		break;
	}

	if (control & ARM_USART_CONTROL_Msk) {
		assert (ARM_DRIVER_ERROR_UNSUPPORTED);
	}

	if (control & ARM_USART_FLOW_CONTROL_Msk) {
		assert (ARM_DRIVER_ERROR_UNSUPPORTED);
	}

	return status;
#endif

#if FREESCALE_DEBUG_LPUART
	int32_t status = ARM_DRIVER_OK;

	// Set baud rate
	m_lpuartUserConfig.baudRate_Bps = arg;

	switch (control & ARM_USART_DATA_BITS_Msk) {
	//OM:case ARM_USART_DATA_BITS_8:
	//OM:	m_lpuartUserConfig.bitCountPerChar = kLPUART_8BitsPerChar;
	//OM:	break;
	//OM:case ARM_USART_DATA_BITS_9:
	//OM:	m_lpuartUserConfig.bitCountPerChar = kLPUART_9BitsPerChar;
	//OM:	break;
	default:
		status = ARM_DRIVER_ERROR_UNSUPPORTED;
		DEBUG_NOT_SUPPORTED();
		break;
	}

	switch (control & ARM_USART_PARITY_Msk) {
	case ARM_USART_PARITY_NONE:
		m_lpuartUserConfig.parityMode = kLPUART_ParityDisabled;
		break;
	case ARM_USART_PARITY_EVEN:
		m_lpuartUserConfig.parityMode = kLPUART_ParityEven;
		break;
	case ARM_USART_PARITY_ODD:
		m_lpuartUserConfig.parityMode = kLPUART_ParityOdd;
		break;
    }

	switch (control & ARM_USART_STOP_BITS_Msk) {
	case ARM_USART_STOP_BITS_1:
		m_lpuartUserConfig.stopBitCount = kLPUART_OneStopBit;
		break;
	case ARM_USART_STOP_BITS_2:
		m_lpuartUserConfig.stopBitCount = kLPUART_TwoStopBit;
		break;
	default:
		status = ARM_DRIVER_ERROR_UNSUPPORTED;
		DEBUG_NOT_SUPPORTED();
		break;
	}

	if (control & ARM_USART_CONTROL_Msk) {
		assert (ARM_DRIVER_ERROR_UNSUPPORTED);
	}

	if (control & ARM_USART_FLOW_CONTROL_Msk) {
		assert (ARM_DRIVER_ERROR_UNSUPPORTED);
	}

	return status;
#endif
}
