==> duongn776/S32K-MCU-K25.1-Assignment/Mock_Project/Bootloader/Drivers/Src/Driver_USART.c <==
#include "Driver_USART.h"
#define ARM_USART_DRV_VERSION    ARM_DRIVER_VERSION_MAJOR_MINOR(1, 0)  /* driver version */

static int32_t ARM_USART_Initialize(ARM_USART_SignalEvent_t cb_event)
{
    if (cb_event != NULL)
    {
        huart1.CallbackEvent = cb_event;
    }
    
    /* Initialize USART peripheral */
    HAL_USART_Init(&huart1);

    return ARM_DRIVER_OK;
}

static int32_t ARM_USART_Uninitialize(void)
{
    /* De-initialize USART peripheral */
    HAL_USART_DeInit(&huart1);

    return ARM_DRIVER_OK;
}

static int32_t ARM_USART_Send(const void *data, uint32_t num)
{
    const uint8_t *pData = (const uint8_t *)data;

    /* Check for valid parameters */
    if ((pData == NULL) || (num == 0U))
    {
        return ARM_DRIVER_ERROR;
    }

    /* Blocking mode */
    HAL_USART_Transmit(&huart1, (uint8_t*)pData, num);
    return ARM_DRIVER_OK;
}

static int32_t ARM_USART_Receive(void *data, uint32_t num)
{
    uint8_t *pData = (uint8_t *)data;

    /* Check for valid parameters */
    if ((pData == NULL) || (num == 0U))
    {
        return ARM_DRIVER_ERROR;
    }

    if (huart1.CallbackEvent != NULL)
    {
        /* Interrupt mode */
        HAL_USART_Receive_IT(&huart1, pData, num);
    }
    else
    {
        /* Blocking mode */
        HAL_USART_Receive(&huart1, pData, num);
    }

    return ARM_DRIVER_OK;
}

static int32_t ARM_USART_Control(uint32_t control, uint32_t arg)
{
    uint32_t operation_mode = control & ARM_USART_MODE_ASYNCHRONOUS;
    uint32_t data_bits = control & ARM_USART_DATA_BITS_Msk;
    uint32_t parity_bit = control & ARM_USART_PARITY_Msk;
    uint32_t stop_bits = control & ARM_USART_STOP_BITS_Msk;
    uint32_t flow_control = control & ARM_USART_FLOW_CONTROL_Msk;
    uint32_t clock_parity = control & ARM_USART_CPOL_Msk;
    uint32_t clock_phase = control & ARM_USART_CPHA_Msk;
    uint32_t miscellaneous = control & ARM_USART_CONTROL_Msk;
    if ((arg != 0) && (arg != 1))
    {
        /* Configure Operation mode */
        switch (operation_mode)
        {
            case ARM_USART_MODE_ASYNCHRONOUS:
                // Configure for Asynchronous mode
                huart1.Init.BaudRate = arg;
                USART_SetBaudRate(huart1.pUSARTx, huart1.Init.BaudRate);
                break;

            case ARM_USART_MODE_SYNCHRONOUS_MASTER:
            case ARM_USART_MODE_SYNCHRONOUS_SLAVE:
            case ARM_USART_MODE_SINGLE_WIRE:
            case ARM_USART_MODE_IRDA:
            case ARM_USART_MODE_SMART_CARD:
            default:
                /* unsupported mode */
                return ARM_DRIVER_ERROR_UNSUPPORTED;
        }

        /* Configure Data bits */
        switch (data_bits)
        {
            case ARM_USART_DATA_BITS_7:
                /* Set 7-bit data mode */
                HAL_USART_Set7BitMode(huart1.pUSARTx);
                break;

            case ARM_USART_DATA_BITS_8:
                /* Set 8-bit data mode */
                HAL_USART_Set8BitMode(huart1.pUSARTx);
                break;

            case ARM_USART_DATA_BITS_9:
                /* Set 9-bit data mode */
                HAL_USART_Set9BitMode(huart1.pUSARTx);
                break;

            case ARM_USART_DATA_BITS_5:
            case ARM_USART_DATA_BITS_6:
            default:
                /* unsupported data bits */
                return ARM_DRIVER_ERROR_UNSUPPORTED;
        }

        /* Configure Parity bit */
        switch (parity_bit)
        {
            case ARM_USART_PARITY_NONE:
                /* Set no parity bit */
                HAL_USART_SetParityNone(huart1.pUSARTx);
                break;

            case ARM_USART_PARITY_EVEN:
                /* Set even parity bit */
                HAL_USART_SetParityEven(huart1.pUSARTx);
                break;

            case ARM_USART_PARITY_ODD:
                /* Set odd parity bit */
                HAL_USART_SetParityOdd(huart1.pUSARTx);
                break;
            default:
                /* unsupported parity bit */
                return ARM_DRIVER_ERROR_UNSUPPORTED;
        }

        /* Configure Stop bits */
        switch (stop_bits)
        {
            case ARM_USART_STOP_BITS_1:
                /* Set 1 stop bit */
                HAL_USART_SetStopBits1(huart1.pUSARTx);
                break;

            case ARM_USART_STOP_BITS_2:
                /* Set 2 stop bits */
                HAL_USART_SetStopBits2(huart1.pUSARTx);
                break;

            case ARM_USART_STOP_BITS_1_5:
            case ARM_USART_STOP_BITS_0_5:
            default:
                /* unsupported stop bits */
                return ARM_DRIVER_ERROR_UNSUPPORTED;
        }

        /* Configure Flow control */
        switch (flow_control)
        {
            case ARM_USART_FLOW_CONTROL_NONE:
                /* No flow control */
                HAL_USART_FlowControlNone(huart1.pUSARTx);
                break;

            case ARM_USART_FLOW_CONTROL_RTS:
                /* RTS flow control */
                HAL_USART_FlowControlRTS(huart1.pUSARTx);
                break;

            case ARM_USART_FLOW_CONTROL_CTS:
                /* CTS flow control */
                HAL_USART_FlowControlCTS(huart1.pUSARTx);
                break;

            case ARM_USART_FLOW_CONTROL_RTS_CTS:
                /* RTS and CTS flow control */
                HAL_USART_FlowControlRTS_CTS(huart1.pUSARTx);
                break;

            default:
                /* unsupported flow control */
                return ARM_DRIVER_ERROR_UNSUPPORTED;
        }

        /* Configure clock polarity and clock phase */
        /* @Note: These parameters are only applicable for synchronous mode, so not implemented */
        if ((clock_parity != 0U) || (clock_phase != 0U))
        {
            /* unsupported clock polarity or clock phase */
            return ARM_DRIVER_ERROR_UNSUPPORTED;
        }
    }

    /* Configure miscellaneous */
    switch (miscellaneous)
    {
        case ARM_USART_CONTROL_TX:
            if (arg)
            {
                /* Enable transmitter */
                HAL_USART_EnableTx(&huart1);
            }
            else
            {
                /* Disable transmitter */
                HAL_USART_DisableTx(&huart1);
            }
            break;

        case ARM_USART_CONTROL_RX:
            if (arg)
            {
                /* Enable receiver */
                HAL_USART_EnableRx(&huart1);
            }
            else
            {
                /* Disable receiver */
                HAL_USART_DisableRx(&huart1);
            }
            break;
        
        case ARM_USART_ABORT_SEND:
            /* Abort ongoing USART transmission */
            HAL_USART_AbortTx(&huart1);
            break;
        
        case ARM_USART_ABORT_RECEIVE:
            /* Abort ongoing USART reception */
            HAL_USART_AbortRx(&huart1);
            break;
        
        case ARM_USART_ABORT_TRANSFER:
            /* Abort ongoing USART transmission and reception */
            HAL_USART_AbortTx(&huart1);
            HAL_USART_AbortRx(&huart1);
            break;
        
        case ARM_USART_CONTROL_BREAK:
            if (arg)
            {
                /* Send break */
                HAL_USART_SendBreak(&huart1);
            }
            else
            {
                /* No break */
                HAL_USART_StopBreak(&huart1);
            }
            break;
        
            /* Unsupported features on S32K144 */
            case ARM_USART_CONTROL_SMART_CARD_NACK:
            case ARM_USART_SET_DEFAULT_TX_VALUE:
            case ARM_USART_SET_IRDA_PULSE:
            case ARM_USART_SET_SMART_CARD_CLOCK:
            case ARM_USART_SET_SMART_CARD_GUARD_TIME:
                return ARM_DRIVER_ERROR_UNSUPPORTED;

            default:
                /* unsupported miscellaneous operation */
                return ARM_DRIVER_ERROR_UNSUPPORTED;
    }
    return ARM_DRIVER_OK;
}
